docs(icon): Add icons folder

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,3 @@
 recursive-include honeybee_grasshopper_energy/user_objects *.ghuser
 recursive-exclude honeybee_grasshopper_energy/json *.json
+recursive-exclude honeybee_grasshopper_energy/icon *.png
