--- a/honeybee_grasshopper_energy/json/HB_Apply_ProgramType.json
+++ b/honeybee_grasshopper_energy/json/HB_Apply_ProgramType.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.2.0", 
+  "version": "1.2.1", 
   "nickname": "ApplyProgram", 
   "outputs": [
     [
@@ -29,7 +29,7 @@
     }
   ], 
   "subcategory": "3 :: Loads", 
-  "code": "\ntry:\n    from honeybee_energy.lib.programtypes import program_type_by_identifier\nexcept ImportError as e:\n    raise ImportError('\\nFailed to import honeybee_energy:\\n\\t{}'.format(e))\n\ntry:\n    from ladybug_{{cad}}.{{plugin}} import all_required_inputs, longest_list\nexcept ImportError as e:\n    raise ImportError('\\nFailed to import ladybug_{{cad}}:\\n\\t{}'.format(e))\n\n\nif all_required_inputs(ghenv.Component):\n    # duplicate the initial objects\n    rooms = [obj.duplicate() for obj in _rooms]\n\n    # apply the program to the rooms\n    for i, room in enumerate(rooms):\n        prog = longest_list(_program, i)\n        if isinstance(prog, str):  # get the program object if it is a string\n            prog = program_type_by_identifier(prog)\n        room.properties.energy.program_type = prog", 
+  "code": "\ntry:\n    from honeybee.room import Room\nexcept ImportError as e:\n    raise ImportError('\\nFailed to import honeybee_energy:\\n\\t{}'.format(e))\n\ntry:\n    from honeybee_energy.lib.programtypes import program_type_by_identifier\nexcept ImportError as e:\n    raise ImportError('\\nFailed to import honeybee_energy:\\n\\t{}'.format(e))\n\ntry:\n    from ladybug_{{cad}}.{{plugin}} import all_required_inputs, longest_list\nexcept ImportError as e:\n    raise ImportError('\\nFailed to import ladybug_{{cad}}:\\n\\t{}'.format(e))\n\n\nif all_required_inputs(ghenv.Component):\n    # duplicate the initial objects\n    rooms = [obj.duplicate() for obj in _rooms if isinstance(obj, Room)]\n\n    # apply the program to the rooms\n    for i, room in enumerate(rooms):\n        prog = longest_list(_program, i)\n        if isinstance(prog, str):  # get the program object if it is a string\n            prog = program_type_by_identifier(prog)\n        room.properties.energy.program_type = prog", 
   "category": "HB-Energy", 
   "name": "HB Apply ProgramType", 
   "description": "Apply ProgramType objects to Rooms.\n-"
