--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -39,16 +39,11 @@ jobs:
       - name: Update lbt-grasshopper
         if: contains(steps.new_release.outputs.tag, '.')
         env:
-          RELEASE_TAG: steps.new_release.outputs.tag
+          RELEASE_TAG: ${{ steps.new_release.outputs.tag }}
           DISPATCH_REPO: ladybug-tools/lbt-grasshopper
           DEPS_TOKEN: ${{ secrets.DEPS_UPDATING }}
         run: |
           curl -X POST https://api.github.com/repos/$DISPATCH_REPO/dispatches \
           -H "Accept: application/vnd.github.everest-preview+json" \
-          -d '{
-            "event_type": "honeybee_grasshopper_core_release",
-            "client_payload": {
-              "version" : "'$RELEASE_TAG'"
-            }
-          }' \
+          -d '{"event_type": "honeybee_grasshopper_core_release", "client_payload": {"version": "'$RELEASE_TAG'"}}' \
           -u ladybugbot:$DEPS_TOKEN
