--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -45,5 +45,5 @@ jobs:
         run: |
           curl -X POST https://api.github.com/repos/$DISPATCH_REPO/dispatches \
           -H "Accept: application/vnd.github.everest-preview+json" \
-          -d '{"event_type": "honeybee_grasshopper_energy_release", "client_payload": {"version": "$RELEASE_TAG"}}' \
+          -d '{"event_type": "honeybee_grasshopper_energy_release", "client_payload": {"version": "${{ steps.new_release.outputs.tag }}"}}' \
           -u ladybugbot:$DEPS_TOKEN
