--- a/honeybee_grasshopper_energy/json/HB_Apply_ProgramType.json
+++ b/honeybee_grasshopper_energy/json/HB_Apply_ProgramType.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.6.0", 
+  "version": "1.6.1", 
   "nickname": "ApplyProgram", 
   "outputs": [
     [
@@ -16,7 +16,7 @@
     {
       "access": "list", 
       "name": "_rooms", 
-      "description": "Honeybee Rooms to which the input load objects should be assigned.", 
+      "description": "Honeybee Rooms to which the input program should be assigned.\nThis can also be a Honeybee Model for which all Rooms will be\nassigned the ProgramType.", 
       "type": "System.Object", 
       "default": null
     }, 
@@ -29,8 +29,8 @@
     }
   ], 
   "subcategory": "3 :: Loads", 
-  "code": "\ntry:\n    from honeybee.room import Room\nexcept ImportError as e:\n    raise ImportError('\\nFailed to import honeybee_energy:\\n\\t{}'.format(e))\n\ntry:\n    from honeybee_energy.lib.programtypes import program_type_by_identifier, \\\n        building_program_type_by_identifier\nexcept ImportError as e:\n    raise ImportError('\\nFailed to import honeybee_energy:\\n\\t{}'.format(e))\n\ntry:\n    from ladybug_{{cad}}.{{plugin}} import all_required_inputs, longest_list\nexcept ImportError as e:\n    raise ImportError('\\nFailed to import ladybug_{{cad}}:\\n\\t{}'.format(e))\n\n\nif all_required_inputs(ghenv.Component):\n    # duplicate the initial objects\n    rooms = [obj.duplicate() for obj in _rooms if isinstance(obj, Room)]\n\n    # apply the program to the rooms\n    for i, room in enumerate(rooms):\n        prog = longest_list(_program, i)\n        if isinstance(prog, str):  # get the program object if it is a string\n            try:\n                prog = building_program_type_by_identifier(prog)\n            except ValueError:\n                prog = program_type_by_identifier(prog)\n        room.properties.energy.program_type = prog", 
+  "code": "\ntry:\n    from honeybee.model import Model\n    from honeybee.room import Room\nexcept ImportError as e:\n    raise ImportError('\\nFailed to import honeybee_energy:\\n\\t{}'.format(e))\n\ntry:\n    from honeybee_energy.lib.programtypes import program_type_by_identifier, \\\n        building_program_type_by_identifier\nexcept ImportError as e:\n    raise ImportError('\\nFailed to import honeybee_energy:\\n\\t{}'.format(e))\n\ntry:\n    from ladybug_{{cad}}.{{plugin}} import all_required_inputs, longest_list\nexcept ImportError as e:\n    raise ImportError('\\nFailed to import ladybug_{{cad}}:\\n\\t{}'.format(e))\n\n\nif all_required_inputs(ghenv.Component):\n    # duplicate the initial objects\n    rooms = [obj.duplicate() for obj in _rooms]\n\n    # extract any rooms from the input Models\n    hb_objs = []\n    for hb_obj in rooms:\n        if isinstance(hb_obj, Model):\n            hb_objs.extend(hb_obj.rooms)\n        elif isinstance(hb_obj, Room):\n            hb_objs.append(hb_obj)\n        else:\n            raise ValueError(\n                'Expected Honeybee Room or Model. Got {}.'.format(type(hb_obj)))\n\n    # apply the program to the rooms\n    for i, room in enumerate(hb_objs):\n        prog = longest_list(_program, i)\n        if isinstance(prog, str):  # get the program object if it is a string\n            try:\n                prog = building_program_type_by_identifier(prog)\n            except ValueError:\n                prog = program_type_by_identifier(prog)\n        room.properties.energy.program_type = prog", 
   "category": "HB-Energy", 
   "name": "HB Apply ProgramType", 
-  "description": "Apply ProgramType objects to Rooms.\n-"
+  "description": "Apply ProgramType objects to Rooms or a Model.\n-"
 }
